Changes since version 3.0.1
---------------------------

- Unsupported port to Solaris 10 on Intel/AMD contributed by
  Markus Bernhardt.

- Removed removeObjectFactory() from the communicator interface.

- Added a new object and server allocation mechanism to IceGrid. See
  the Ice manual for more information.

- The IceGrid XML descriptor <adapter> can only be used to specify
  indirect adapters. It's no longer possible to specify an adapter
  with an empty id. You can use properties to configure direct
  adapters.

- Fixed a bug where IceGrid would fail to register well-known objects
  with an identity containing reserved characters for proxies.

- Added "always" and "session" activation modes to IceGrid. See the
  Ice manual for more information.

- Changed the entry point of the IceSSL plugin to be 
  IceSSL:createIceSSL.

- Changed the entry point of the IceStorm service to be 
  IceStormService,31:createIceStorm.

- ObjectAdapter::deactivate() now notifies the locator registry when
  the adapter is deactivated.

- Fixed ObjectAdapter::activate() to activate the object adapter
  only if it is able to register its endpoints and process proxy with
  the locator. Calling activate() again retries a failed registration.

- Glacier2.AllowCategories is now deprecated and superseded by
  Glacier2.Filter.Category.Accept.

- A new address filtering mechanism has been added to the Glacier2
  router. See the description of the Glacier2.Filter.Address.Accept
  and Glacier2.Filter.Address.Reject properties in the Ice manual
  for details.

- The Glacier2 router's identity-based filtering is now modifiable at
  runtime through the Glacier2::SessionControl interface.

- Generating new streaming functions for a Slice structure. The
  ice_write and ice_read member functions replace their internal
  equivalents (__write and __read).

- Removed getDefaultProperties() functions, and the global default
  properties. If you need global properties, you can easily create